Isolate B2B and B2G project workspaces
